# test-itk

./: .gitignore  LICENSE  main.py  pyproject.toml  result_parallel_processing_A.json  result_parallel_processing_B.json  result_parallel_processing_C.json  results.jsonl  results1.jsonl
src/: cash_decorator.py
src/asgi_exchange_rate_task/: main.py
src/asyncio_http_request/: advanced_asyncio_http_request(2).py  advanced_asyncio_http_request.py  asyncio_http_request.py
src/current_time_meta_class/: current_time_meta_class.py  test_current_time_meta_class.py
src/distributed_lock/: distributed_lock.py  test_single_decorator.py
src/parallel_processing/: base.py  parallel_processing_A.py  parallel_processing_B.py  parallel_processing_V.py  save_file.py
src/queue_data_base/: models.py  utils.py
src/rate_limiter_task/: rate_limiter.py
src/redis_queue_task/: redis_queue.py
src/search_elem_in_sorted_list/: search_algoritm.py
src/singleton/: singleton.py  test_singleton.py
