[project]
name = "test-itk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "django>=5.2.3",
    "ijson>=3.4.0",
    "redis>=6.2.0",
    "ruff>=0.11.13",
    "uvicorn>=0.34.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
